--- a/get-driving-navigation-using-javascript.html
+++ b/get-driving-navigation-using-javascript.html
@@ -3,7 +3,7 @@
 <head>
 <title>How to get a Google Map Driving Direction using Javascript.</title>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.0/jquery.min.js"></script>
-<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB0op_U7FVy2OPtjO_IKAXRBaoM6mNlfKI"></script>
+<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY"></script>
 <script type="text/javascript" src="googlemap.js"></script>
 <link href="style.css" type="text/css" rel="stylesheet"/>
 </head>
